# mgr4smb-langchain-langgraph

./: .env.example  .gitignore  PASSKEY-SANDBOX-PLAN.md  PLAN.md  dev.sh  main.py  menu.sh  mgr4smb - Orquestrator V9.json  mgr4smb-architecture.html  mgr4smb-for-dummies.md  pyproject.toml
chat-ui/: chat.css  chat.js  index.html
mgr4smb/: api.py  auth.py  config.py  exceptions.py  graph.py  llm.py  logging_config.py  memory.py  state.py
passkey-otp-sandbox/: .gitignore  README.md  architecture.html  index.html  knowledge_base.json  menu.sh  pyproject.toml  run.sh
passkey-otp-sandbox/scripts/: ingest_kb_to_mongo.py  issue_dev_jwt.py
passkey-otp-sandbox/src/sandbox/: __init__.py  api.py  auth.py  config.py  exceptions.py  graph.py  llm.py  logging_config.py  memory.py  state.py
passkey-otp-sandbox/src/sandbox/agents/: _helpers.py  account.py  appointment.py  authenticator.py  client_notifier.py  general_info.py  greeting.py  orchestrator.py  reschedule.py  service.py  vendor_notifier.py
passkey-otp-sandbox/src/sandbox/checks/: smoke.py
passkey-otp-sandbox/src/sandbox/prompts/: __init__.py  account.py  appointment.py  authenticator.py  client_notifier.py  general_info.py  greeting.py  orchestrator.py  reschedule.py  service.py  vendor_notifier.py
passkey-otp-sandbox/src/sandbox/tools/: ghl_available_slots.py  ghl_book_appointment.py  ghl_cancel_appointment.py  ghl_client.py  ghl_contact_lookup.py  ghl_get_appointments.py  jobber_client.py  jobber_get_clients.py  jobber_get_jobs.py  jobber_get_properties.py  jobber_get_visits.py  knowledge_base.py  passkey_request_verification.py  passkey_status.py  send_client_notification.py  send_otp.py  send_vendor_reschedule_request.py  verify_otp.py
passkey-otp-sandbox/src/sandbox/webauthn/: challenges.py  storage.py  verification.py
scripts/: _jobber_by_email.py  authorize_jobber.py  (+9 more)
(+36 files in other folders)
